styles/style.css
/* ... */
#heyday-logo-blue {
  animation: rotation 9s infinite linear;
}

@-webkit-keyframes rotation {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(359deg);
  }
}

/*

███    ███ ███████ ██████  ██  █████       ██████  ██    ██ ███████ ██████  ██ ███████ ███████ 
████  ████ ██      ██   ██ ██ ██   ██     ██    ██ ██    ██ ██      ██   ██ ██ ██      ██      
██ ████ ██ █████   ██   ██ ██ ███████     ██    ██ ██    ██ █████   ██████  ██ █████   ███████ 
██  ██  ██ ██      ██   ██ ██ ██   ██     ██ ▄▄ ██ ██    ██ ██      ██   ██ ██ ██           ██ 
██      ██ ███████ ██████  ██ ██   ██      ██████   ██████  ███████ ██   ██ ██ ███████ ███████ 

*/

/* Medium devices (tablets, 768px and up) */

@media (min-width: 768px) {
}

/* Large devices (desktops, 992px and up) */

@media (min-width: 992px) {
  .holding-page-title {
    font-size: 2rem;
  }

  h1 {
    font-size: 4.275rem;
  }

  h2 {
    font-size: 2.25rem;
  }

  h3 {
    font-size: 1.625rem;
  }

  .hero {
    min-height: 100vh;
  }

  .hero-headline-wrapper {
    padding: 4rem 8rem;
  }

  .grid {
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    grid-gap: 1rem;
  }

  /* Grayscale filter with full-colour on hover and tap */
  .work-page-grid-item a.grayscale img {
    filter: grayscale(100);
  }

  .work-page-grid-item > a.grayscale:active img,
  .work-page-grid-item > a.grayscale:hover img {
    filter: grayscale(0);
  }

  .about {
    padding: 4rem;
    grid-template-columns: 1fr 1fr 1fr;
  }

  .global-footer {
    padding: 4rem 4rem 4rem 4rem;
    grid-template-columns: 1fr 1fr 1fr;
  }

  .about-item-1 {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
  }

  .footer-item-1 {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
  }

  .about-item-2 {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
  }

  .footer-item-2 {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
  }

  .about-item-3 {
    grid-row: 1 / 2;
    grid-column: 3 / 4;
  }

  .footer-item-3 {
    grid-row: 1 / 2;
    grid-column: 3 / 4;
  }

  .about-item-4 {
    grid-row: 2 / 3;
    grid-column: 1 / 4;
    text-align: center;
    align-self: end;
  }

  .footer-item-4 {
    grid-row: 2 / 3;
    grid-column: 1 / 4;
    text-align: center;
    align-self: end;
  }

  /* Project Page Flex Direction on Large Devices */
  .project-wrapper {
    flex-direction: row;
  }

  /* Sidebar on Large Devices */
  .project-aside {
    width: 35%;
    height: 100vh;
    padding-top: 2rem;
    padding-right: 2rem;
    padding-bottom: 2rem;
    padding-left: 3rem;
    position: sticky;
  }

  /* Main Project Image Area on Large Devices */
  .project-details {
    width: 65%;
    padding-top: 2rem; /* this must be the same as the top padding on aside */
    padding-right: 3rem; /* this must be the same as the left padding on aside */
  }

  .project-image {
    min-height: 70vh;
    /* This should be deleted if you want to remove space between project images on project pages */
  }

  .project-image-container {
    flex-direction: row;
  }

  .project-navigation {
    justify-content: flex-start;
  }

  .arrow {
    padding-right: 1rem;
  }
}

/* Only add styles below to make very minor adjustments for extra or extra-extra large devices */

/* X-Large devices (large desktops, 1200px and up)*/

@media (min-width: 1200px) {
}

/* XX-Large devices (larger desktops, 1400px and up) */

@media (min-width: 1400px) {
}

